--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,16 @@
   }
 }
 
+/* You... You thought I would comment over CSS? Hell no. */
+
+/* A man once said:
+   Write less CSS, write more JavaScript.
+
+   Except no man ever said that. And I am lying. But you believed it, so did I really lie?
+   The point is, I'm not gonna comment over CSS. Not even a little bit. Not even a smidgeon.
+   Not at all.
+*/
+
 .gradient-link {
   background: linear-gradient(135deg, rgb(var(--accent-rgb)), rgb(var(--accent-light-rgb)));
   background-clip: text;
